CB-23289 Freeipa custom image upgrade without image id
In CoreImageProvider.getImage instead of querying the image by id, now all images are returned and filtered, similarly to FreeIpaImageProvider