@@ -3,8 +3,11 @@ package com.sequenceiq.freeipa.service.image;
 import static com.sequenceiq.common.model.OsType.RHEL8;
 
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 
@@ -31,22 +34,35 @@ public class FreeIpaImageFilter {
     @Inject
     private SupportedOsService supportedOsService;
 
+    @Inject
+    private PreferredOsService preferredOsService;
+
     List<Image> filterImages(List<Image> candidateImages, FreeIpaImageFilterSettings imageFilterSettings) {
         LOGGER.debug("Filtering images with the following parameters: {}", imageFilterSettings);
-        String platform = imageFilterSettings.platform();
-        List<Image> filteredImages = candidateImages.stream()
-                .filter(img -> filterPlatformAndRegion(imageFilterSettings, img))
-                .filter(img -> filterOs(imageFilterSettings, img))
-                .toList();
-        if (!filteredImages.isEmpty()) {
-            List<Image> notApplicableImages = new ArrayList<>(candidateImages);
-            notApplicableImages.removeAll(filteredImages);
-            LOGGER.debug("Used filter: {} | Images filtered: {}", imageFilterSettings, notApplicableImages);
-            return providerSpecificImageFilter.filterImages(platform, filteredImages);
+        if (StringUtils.isNotBlank(imageFilterSettings.currentImageId())) {
+            return candidateImages.stream()
+                    .filter(img -> filterPlatformAndRegion(imageFilterSettings, img))
+                    .filter(img -> supportedOsService.isSupported(img.getOs()))
+                    //It's not clear why we check the provider image reference (eg. the AMI in case of AWS) as imageId here.
+                    //For safety and backward compatibility reasons the check remains here but should be checked if it really needed.
+                    .filter(img -> hasSameUuid(imageFilterSettings.currentImageId(), img) || isMatchingImageIdInRegion(imageFilterSettings, img))
+                    .collect(Collectors.toList());
         } else {
-            LOGGER.warn("Could not find any FreeIPA image matching {} in {}", imageFilterSettings, candidateImages);
-            throw new ImageNotFoundException(String.format("Could not find any FreeIPA image on platform '%s' in region '%s' with os '%s' in catalog '%s'",
-                    imageFilterSettings.platform(), imageFilterSettings.region(), imageFilterSettings.targetOs(), imageFilterSettings.catalog()));
+            String platform = imageFilterSettings.platform();
+            List<Image> filteredImages = candidateImages.stream()
+                    .filter(img -> filterPlatformAndRegion(imageFilterSettings, img))
+                    .filter(img -> filterOs(imageFilterSettings, img))
+                    .toList();
+            if (!filteredImages.isEmpty()) {
+                List<Image> notApplicableImages = new ArrayList<>(candidateImages);
+                notApplicableImages.removeAll(filteredImages);
+                LOGGER.debug("Used filter: {} | Images filtered: {}", imageFilterSettings, notApplicableImages);
+                return providerSpecificImageFilter.filterImages(platform, filteredImages);
+            } else {
+                LOGGER.warn("Could not find any FreeIPA image matching {} in {}", imageFilterSettings, candidateImages);
+                throw new ImageNotFoundException(String.format("Could not find any FreeIPA image on platform '%s' in region '%s' with os '%s' in catalog '%s'",
+                        imageFilterSettings.platform(), imageFilterSettings.region(), imageFilterSettings.targetOs(), imageFilterSettings.catalog()));
+            }
         }
     }
 
@@ -66,5 +82,27 @@ public class FreeIpaImageFilter {
 
     private boolean majorOsUpgradeAllowed(FreeIpaImageFilterSettings imageFilterSettings, String targetOs) {
         return imageFilterSettings.allowMajorOsUpgrade() && MAJOR_OS_UPGRADE_TARGET.equals(targetOs);
+    }
+
+    private Boolean isMatchingImageIdInRegion(FreeIpaImageFilterSettings imageFilterSettings, Image img) {
+        return Optional.ofNullable(img.getImageSetsByProvider().get(imageFilterSettings.platform()).get(imageFilterSettings.region()))
+                .map(reg -> reg.equalsIgnoreCase(imageFilterSettings.currentImageId()))
+                .orElse(false);
+    }
+
+    private boolean hasSameUuid(String imageId, Image img) {
+        return img.getUuid().equalsIgnoreCase(imageId);
+    }
+
+    Optional<Image> findMostRecentImage(List<Image> compatibleImages) {
+        LOGGER.debug("Not found any image compatible with the application version. Falling back to the most recent image.");
+        return compatibleImages.stream()
+                .max(newestImageWithPreferredOs());
+    }
+
+    Comparator<Image> newestImageWithPreferredOs() {
+        String preferredOs = preferredOsService.getPreferredOs();
+        return Comparator.<Image, Integer>comparing(img -> preferredOs.equalsIgnoreCase(img.getOs()) ? 1 : 0)
+                .thenComparing(Image::getDate);
     }
 }
